--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Git Schulung 2019 - Einführung in Git/DevTools</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/master.css">
     <script src="main.js"></script>
 </head>
