--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <h1>Git Schulung 2019</h1>
         <div class="to-do-list">
             <ul>
-                <li>Allan Bachmann: Das ist mein erster Commit mit Git.</li>
+                <li>
+                    <div class="name">Allan Bachmann: </div>
+                    <div class="msg">Das ist mein erster Commit mit Git.</div>
+                </li>
             </ul>
         </div>
     </main>
