--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-        <h1>Git Schulung 2019</h1>
+        <h1>Einführung in Git/DevTools</h1>
         <div class="to-do-list">
             <ul>
                 <li>
